{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 65,
  "lineage": "b5749603-a9a2-0a21-6424-cc397f74b984",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgwa-pr-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0fd9ba48feb7e5748",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-033f46aee48f06d99",
              "subnet-0f3199cfc8fa3cc9c"
            ],
            "tags": {
              "Environment": "Prod"
            },
            "tags_all": {
              "Environment": "Prod"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0430826c231550bf5",
            "vpc_id": "vpc-04edb6358878149e5",
            "vpc_owner_id": "182399704462"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wp-pr-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095f8a7228d03f421",
            "arn": "arn:aws:ec2:il-central-1:182399704462:instance/i-0d157eaf872a8d76c",
            "associate_public_ip_address": false,
            "availability_zone": "il-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-instance-profile",
            "id": "i-0d157eaf872a8d76c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-073a20e16d1256ced",
            "private_dns": "ip-10-5-1-112.il-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.5.1.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-0fc85c3739b492d3d",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0508343e46877c829",
            "tags": {
              "Name": "wp-pr-prod"
            },
            "tags_all": {
              "Name": "wp-pr-prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01afbd3fd68dcd2d5",
              "sg-05e3e927f53284c1a",
              "sg-08958f76f60730868",
              "sg-0d22836b55fd6ec1d"
            ]
          },
          "dependencies": [
            "aws_security_group.alb-to-ec2",
            "aws_security_group.ec2-to-tgw",
            "aws_security_group.prtg-access",
            "aws_security_group.ssm-to-ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route-to-tgw-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.20.20/32",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0da6afba6e021177f2893399335",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0da6afba6e021177f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0430826c231550bf5",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.RTB-pr-prod-Private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_tgw-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0da6afba6e021177f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0da6afba6e021177f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0430826c231550bf5",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.RTB-pr-prod-Private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RTB-pr-prod-Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:182399704462:route-table/rtb-0da6afba6e021177f",
            "id": "rtb-0da6afba6e021177f",
            "owner_id": "182399704462",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0430826c231550bf5",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.10.20.20/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0430826c231550bf5",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RTB-pr-prod-Private"
            },
            "tags_all": {
              "Name": "RTB-pr-prod-Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-04edb6358878149e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RTB-pr-prod-Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:182399704462:route-table/rtb-0df7ce3da18c659f5",
            "id": "rtb-0df7ce3da18c659f5",
            "owner_id": "182399704462",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "RTB-pr-prod-Public"
            },
            "tags_all": {
              "Name": "RTB-pr-prod-Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04edb6358878149e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RTB-pr-prod-TGWA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:182399704462:route-table/rtb-09573243913606722",
            "id": "rtb-09573243913606722",
            "owner_id": "182399704462",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "RTB-pr-prod-TGWA"
            },
            "tags_all": {
              "Name": "RTB-pr-prod-TGWA"
            },
            "timeouts": null,
            "vpc_id": "vpc-04edb6358878149e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-pr-prod-private-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fe74bfa449bfc64",
            "route_table_id": "rtb-0da6afba6e021177f",
            "subnet_id": "subnet-09a3826d07c91ca6e"
          },
          "dependencies": [
            "aws_route_table.RTB-pr-prod-Private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-pr-prod-public-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a479037c697ca34c",
            "route_table_id": "rtb-0df7ce3da18c659f5",
            "subnet_id": "subnet-02eeb48aa065cebf0"
          },
          "dependencies": [
            "aws_route_table.RTB-pr-prod-Public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-pr-prod-public-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dff9ba01cb5074ce",
            "route_table_id": "rtb-0df7ce3da18c659f5",
            "subnet_id": "subnet-01cbc2bd9c55fd781"
          },
          "dependencies": [
            "aws_route_table.RTB-pr-prod-Public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-pr-prod-tgwa-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04291d8a7534de280",
            "route_table_id": "rtb-09573243913606722",
            "subnet_id": "subnet-0f3199cfc8fa3cc9c"
          },
          "dependencies": [
            "aws_route_table.RTB-pr-prod-TGWA",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-pr-prod-tgwa-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010df4c9836da920d",
            "route_table_id": "rtb-09573243913606722",
            "subnet_id": "subnet-033f46aee48f06d99"
          },
          "dependencies": [
            "aws_route_table.RTB-pr-prod-TGWA",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets-pr-prod-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff1b1f95a65988a5",
            "route_table_id": "rtb-0da6afba6e021177f",
            "subnet_id": "subnet-0508343e46877c829"
          },
          "dependencies": [
            "aws_route_table.RTB-pr-prod-Private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-to-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:182399704462:security-group/sg-08958f76f60730868",
            "description": "alb-to-ec2",
            "egress": [],
            "id": "sg-08958f76f60730868",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-to-alb",
            "name_prefix": "",
            "owner_id": "182399704462",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04edb6358878149e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-to-tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:182399704462:security-group/sg-01afbd3fd68dcd2d5",
            "description": "ec2-to-tgw",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01afbd3fd68dcd2d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ec2-to-tgw",
            "name_prefix": "",
            "owner_id": "182399704462",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04edb6358878149e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prtg-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:182399704462:security-group/sg-0d22836b55fd6ec1d",
            "description": "prtg-access",
            "egress": [],
            "id": "sg-0d22836b55fd6ec1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.20.20/32"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.10.20.20/32"
                ],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "10.10.20.20/32"
                ],
                "description": "",
                "from_port": 135,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 135
              },
              {
                "cidr_blocks": [
                  "10.10.20.20/32"
                ],
                "description": "",
                "from_port": 161,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 162
              },
              {
                "cidr_blocks": [
                  "10.10.20.20/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.10.20.20/32"
                ],
                "description": "",
                "from_port": 49152,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.10.20.20/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prtg-access",
            "name_prefix": "",
            "owner_id": "182399704462",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04edb6358878149e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm-to-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:182399704462:security-group/sg-05e3e927f53284c1a",
            "description": "ssm-to-ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "10.5.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e3e927f53284c1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.5.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ssm-to-ec2",
            "name_prefix": "",
            "owner_id": "182399704462",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04edb6358878149e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:182399704462:subnet/subnet-0508343e46877c829",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0508343e46877c829",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182399704462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "subnet-pr-prod-private-az1"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "subnet-pr-prod-private-az1"
            },
            "vpc_id": "vpc-04edb6358878149e5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:182399704462:subnet/subnet-09a3826d07c91ca6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1b",
            "availability_zone_id": "ilc1-az2",
            "cidr_block": "10.5.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a3826d07c91ca6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182399704462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "subnet-pr-prod-private-az2"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "subnet-pr-prod-private-az2"
            },
            "vpc_id": "vpc-04edb6358878149e5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:182399704462:subnet/subnet-02eeb48aa065cebf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.5.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02eeb48aa065cebf0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182399704462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "subnet-pr-prod-public-az1"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "subnet-pr-prod-public-az1"
            },
            "vpc_id": "vpc-04edb6358878149e5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:182399704462:subnet/subnet-01cbc2bd9c55fd781",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1b",
            "availability_zone_id": "ilc1-az2",
            "cidr_block": "10.5.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cbc2bd9c55fd781",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182399704462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "subnet-pr-prod-public-az2"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "subnet-pr-prod-public-az2"
            },
            "vpc_id": "vpc-04edb6358878149e5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tgwa_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:182399704462:subnet/subnet-0f3199cfc8fa3cc9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.5.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3199cfc8fa3cc9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182399704462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "subnet-pr-prod-tgwa-az1"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "subnet-pr-prod-tgwa-az1"
            },
            "vpc_id": "vpc-04edb6358878149e5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:182399704462:subnet/subnet-033f46aee48f06d99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1b",
            "availability_zone_id": "ilc1-az2",
            "cidr_block": "10.5.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033f46aee48f06d99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182399704462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "subnet-pr-prod-tgwa-az2"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "subnet-pr-prod-tgwa-az2"
            },
            "vpc_id": "vpc-04edb6358878149e5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:182399704462:vpc/vpc-04edb6358878149e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-0996a502a44f99f08",
            "default_route_table_id": "rtb-09035a9d165b9fa2d",
            "default_security_group_id": "sg-097d3c3748d8e4c5a",
            "dhcp_options_id": "dopt-05b68b1af9c1d1698",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04edb6358878149e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09035a9d165b9fa2d",
            "owner_id": "182399704462",
            "tags": {
              "Environment": "Prod",
              "Name": "vpc-pr-prod"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vpc-pr-prod"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:182399704462:vpc-endpoint/vpce-028cbda72c789dd49",
            "dns_entry": [
              {
                "dns_name": "vpce-028cbda72c789dd49-h0k1uoj4.ssm.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-028cbda72c789dd49-h0k1uoj4-il-central-1a.ssm.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-028cbda72c789dd49-h0k1uoj4-il-central-1b.ssm.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "ssm.il-central-1.amazonaws.com",
                "hosted_zone_id": "Z074488818JH3RY320RXA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-028cbda72c789dd49",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02e013bc8ab7651dc",
              "eni-07e72fcf595507377"
            ],
            "owner_id": "182399704462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05e3e927f53284c1a"
            ],
            "service_name": "com.amazonaws.il-central-1.ssm",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.5.1.140",
                "subnet_id": "subnet-0508343e46877c829"
              },
              {
                "ipv4": "10.5.2.61",
                "subnet_id": "subnet-09a3826d07c91ca6e"
              }
            ],
            "subnet_ids": [
              "subnet-0508343e46877c829",
              "subnet-09a3826d07c91ca6e"
            ],
            "tags": {
              "Name": "SSM Endpoint - ssm"
            },
            "tags_all": {
              "Name": "SSM Endpoint - ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04edb6358878149e5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:182399704462:vpc-endpoint/vpce-07866991ba77eb7ae",
            "dns_entry": [
              {
                "dns_name": "vpce-07866991ba77eb7ae-ak1uv8px.ssmmessages.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-07866991ba77eb7ae-ak1uv8px-il-central-1b.ssmmessages.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-07866991ba77eb7ae-ak1uv8px-il-central-1a.ssmmessages.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "ssmmessages.il-central-1.amazonaws.com",
                "hosted_zone_id": "Z03837852ZX7A3QDW3U27"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07866991ba77eb7ae",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0df758b7e372f4aae",
              "eni-0ff6228e8c99295e9"
            ],
            "owner_id": "182399704462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05e3e927f53284c1a"
            ],
            "service_name": "com.amazonaws.il-central-1.ssmmessages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.5.1.70",
                "subnet_id": "subnet-0508343e46877c829"
              },
              {
                "ipv4": "10.5.2.168",
                "subnet_id": "subnet-09a3826d07c91ca6e"
              }
            ],
            "subnet_ids": [
              "subnet-0508343e46877c829",
              "subnet-09a3826d07c91ca6e"
            ],
            "tags": {
              "Name": "SSM Endpoint - ssmmessages"
            },
            "tags_all": {
              "Name": "SSM Endpoint - ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04edb6358878149e5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:182399704462:vpc-endpoint/vpce-0575c171dcc819d4c",
            "dns_entry": [
              {
                "dns_name": "vpce-0575c171dcc819d4c-4b76uc7p.ec2messages.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-0575c171dcc819d4c-4b76uc7p-il-central-1b.ec2messages.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-0575c171dcc819d4c-4b76uc7p-il-central-1a.ec2messages.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "ec2messages.il-central-1.amazonaws.com",
                "hosted_zone_id": "Z03188178U4SCIXME7R"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0575c171dcc819d4c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-067865b693d9b8dc0",
              "eni-0b475e599991900ef"
            ],
            "owner_id": "182399704462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05e3e927f53284c1a"
            ],
            "service_name": "com.amazonaws.il-central-1.ec2messages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.5.1.114",
                "subnet_id": "subnet-0508343e46877c829"
              },
              {
                "ipv4": "10.5.2.174",
                "subnet_id": "subnet-09a3826d07c91ca6e"
              }
            ],
            "subnet_ids": [
              "subnet-0508343e46877c829",
              "subnet-09a3826d07c91ca6e"
            ],
            "tags": {
              "Name": "SSM Endpoint - ec2messages"
            },
            "tags_all": {
              "Name": "SSM Endpoint - ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04edb6358878149e5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}